--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -352,6 +352,7 @@
 
   <!-- Resources -->
   <h2>Resources</h2>
+  <meu-primeiro-component></meu-primeiro-component>
   <p>Here are some links to help you get started:</p>
 
   <div class="card-container">
