--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -353,6 +353,7 @@
   <!-- Resources -->
   <h2>Resources</h2>
   <meu-primeiro-component></meu-primeiro-component>
+  <app-cursos></app-cursos>
   <p>Here are some links to help you get started:</p>
 
   <div class="card-container">
