--- a/src/app/cursos/cursos.component.html
+++ b/src/app/cursos/cursos.component.html
@@ -1,3 +1,7 @@
-<p>cursos component works!</p>
+<p>Lista de cursos do portal {{nomePortal}}</p>
 
 <app-curso-detalhe></app-curso-detalhe>
+
+<ul>
+    <li *ngFor="let curso of cursos"> {{curso}} </li>
+</ul>
